--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script>
+      window.BASE_URL = "http://192.168.1.7:3000";
+    </script>    
   </head>
   <body>
     <div id="root"></div>
