--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Acrylic Image Customizer</title>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <script>
     window.BASE_URL = "http://192.168.1.6:8080";
   </script>
